# noom

./: Cargo.toml  README.md  test.nm
src/: emit.rs  err.rs  luish.rs  main.rs  par.rs  par_test.rs
src/snapshots/: noom__par_test__for.snap  noom__par_test__func_assign.snap  noom__par_test__func_let.snap  noom__par_test__func_let_2.snap  noom__par_test__func_let_3.snap  noom__par_test__func_let_4.snap  noom__par_test__if.snap  noom__par_test__if_2.snap  noom__par_test__if_3.snap  noom__par_test__pipe.snap  noom__par_test__table.snap
