[package]
name = "noom"
version = "0.1.0"
edition = "2021"
author = "Javier A. Pollak <javi.po.123@gmail.com>"
about = "Typesafe and Ergonomic Frontend Language for Lua"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "unicode"] }
nom = "7.1.1"
nom_locate = "4.0.0"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.26.0", features = ["yaml"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
